--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 colored = "2.1.0"
 derive_more = { version = "0.99.17", default-features = false, features = ["deref", "from", "deref_mut"] }
+enum-as-inner = "0.6.0"
 getset = "0.1.2"
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.2"
