Add ShulkerScript basic compiler for only main function and literal commands

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ colored = "2.1.0"
 derive_more = { version = "0.99.17", default-features = false, features = ["deref", "from", "deref_mut"] }
 enum-as-inner = "0.6.0"
 getset = "0.1.2"
+shulkerbox = { path = "../shulkerbox" }
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.2"
 thiserror = "1.0.58"
