--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["shulkerbox"]
+shulkerbox = ["dep:shulkerbox"]
+
 [dependencies]
 colored = "2.1.0"
 derive_more = { version = "0.99.17", default-features = false, features = ["deref", "from", "deref_mut"] }
 enum-as-inner = "0.6.0"
 getset = "0.1.2"
-shulkerbox = { path = "../shulkerbox" }
+shulkerbox = { path = "../shulkerbox", optional = true}
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.2"
 thiserror = "1.0.58"
