Transpile functions based on annotations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ default = ["shulkerbox"]
 shulkerbox = ["dep:shulkerbox"]
 
 [dependencies]
+chksum-md5 = "0.0.0"
 colored = "2.1.0"
 derive_more = { version = "0.99.17", default-features = false, features = ["deref", "from", "deref_mut"] }
 enum-as-inner = "0.6.0"
