--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["shulkerbox"]
+default = ["lua", "shulkerbox"]
 shulkerbox = ["dep:shulkerbox"]
 serde = ["dep:serde"]
+lua = ["dep:mlua"]
 
 [dependencies]
 chksum-md5 = "0.0.0"
@@ -16,6 +17,7 @@ colored = "2.1.0"
 derive_more = { version = "0.99.17", default-features = false, features = ["deref", "from", "deref_mut"] }
 enum-as-inner = "0.6.0"
 getset = "0.1.2"
+mlua = { version = "0.9.7", features = ["luau"], optional = true }
 serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
 shulkerbox = { path = "../shulkerbox", optional = true}
 strum = { version = "0.26.2", features = ["derive"] }
