Box lua code and switch to lua-jit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ colored = "2.1.0"
 derive_more = { version = "0.99.17", default-features = false, features = ["deref", "from", "deref_mut"] }
 enum-as-inner = "0.6.0"
 getset = "0.1.2"
-mlua = { version = "0.9.7", features = ["luau"], optional = true }
+mlua = { version = "0.9.7", features = ["lua54", "vendored"], optional = true }
 serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
 shulkerbox = { path = "../shulkerbox", optional = true}
 strum = { version = "0.26.2", features = ["derive"] }
