--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ derive_more = { version = "0.99.17", default-features = false, features = ["dere
 enum-as-inner = "0.6.0"
 getset = "0.1.2"
 mlua = { version = "0.9.7", features = ["lua54", "vendored"], optional = true }
+path-absolutize = "3.1.1"
 serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
 shulkerbox = { path = "../shulkerbox", optional = true}
 strum = { version = "0.26.2", features = ["derive"] }
