--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "shulkerscript-lang"
 version = "0.1.0"
 edition = "2021"
 
+authors = ["Moritz Hölting <moritz@hoelting.dev>"]
+categories = ["compilers"]
+description = "ShulkerScript language implementation with compiler"
+repository = "https://github.com/moritz-hoelting/shulkerscript-lang"
+readme = "README.md"
+license = "MIT"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
@@ -23,7 +30,7 @@ getset = "0.1.2"
 mlua = { version = "0.9.7", features = ["lua54", "vendored"], optional = true }
 path-absolutize = "3.1.1"
 serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
-shulkerbox = { path = "../shulkerbox", optional = true}
+shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox", default-features = false, optional = true, rev = "296502dcc5dd29b3d930ffec91ceec3d161e0e47" }
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.2"
 thiserror = "1.0.58"
