--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["lua", "shulkerbox"]
+default = ["fs_access", "lua", "shulkerbox"]
+fs_access = ["shulkerbox?/fs_access"]
+lua = ["dep:mlua"]
 serde = ["dep:serde", "shulkerbox?/serde"]
 shulkerbox = ["dep:shulkerbox"]
-lua = ["dep:mlua"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 path-absolutize = { version = "3.1.1", features = ["use_unix_paths_on_wasm"] }
@@ -31,7 +32,7 @@ itertools = "0.13.0"
 mlua = { version = "0.9.7", features = ["lua54", "vendored"], optional = true }
 path-absolutize = "3.1.1"
 serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
-shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox", default-features = false, optional = true, rev = "a2d20dab8ea97bbd873edafb23afaad34292457f" }
+shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox", default-features = false, optional = true, rev = "aff342a64a94981af942223345b5a5f105212957" }
 strsim = "0.11.1"
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.2"
