--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ getset = "0.1.2"
 itertools = "0.13.0"
 mlua = { version = "0.9.7", features = ["lua54", "vendored"], optional = true }
 path-absolutize = "3.1.1"
+pathdiff = "0.2.1"
 serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
 shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox", default-features = false, optional = true, rev = "aff342a64a94981af942223345b5a5f105212957" }
 strsim = "0.11.1"
