--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 authors = ["Moritz Hölting <moritz@hoelting.dev>"]
 categories = ["compilers"]
-description = "ShulkerScript language implementation with compiler"
+description = "Shulkerscript language implementation with compiler"
 repository = "https://github.com/moritz-hoelting/shulkerscript-lang"
 readme = "README.md"
 license = "MIT"
@@ -13,11 +13,12 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["fs_access", "lua", "shulkerbox"]
+default = ["fs_access", "lua", "shulkerbox", "zip"]
 fs_access = ["shulkerbox?/fs_access"]
 lua = ["dep:mlua"]
 serde = ["dep:serde", "shulkerbox?/serde"]
 shulkerbox = ["dep:shulkerbox"]
+zip = ["shulkerbox?/zip"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 path-absolutize = { version = "3.1.1", features = ["use_unix_paths_on_wasm"] }
@@ -25,7 +26,7 @@ path-absolutize = { version = "3.1.1", features = ["use_unix_paths_on_wasm"] }
 [dependencies]
 chksum-md5 = "0.0.0"
 colored = "2.1.0"
-derive_more = { version = "0.99.17", default-features = false, features = ["deref", "from", "deref_mut"] }
+derive_more = { version = "1.0.0", default-features = false, features = ["deref", "deref_mut", "from"] }
 enum-as-inner = "0.6.0"
 getset = "0.1.2"
 itertools = "0.13.0"
@@ -33,9 +34,9 @@ mlua = { version = "0.9.7", features = ["lua54", "vendored"], optional = true }
 path-absolutize = "3.1.1"
 pathdiff = "0.2.1"
 serde = { version = "1.0.197", features = ["derive", "rc"], optional = true }
-shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox", default-features = false, optional = true, rev = "60458e6b2d719278c4fe090cb2759e123a3f86d2" }
+shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox", default-features = false, optional = true, rev = "a16f1ce105959b37bd5776476352b92905ff12d1" }
 strsim = "0.11.1"
 strum = { version = "0.26.2", features = ["derive"] }
-strum_macros = "0.26.2"
+strum_macros = "0.26.4"
 thiserror = "1.0.58"
 tracing = "0.1.40"
