--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,11 +32,12 @@ derive_more = { version = "1.0.0", default-features = false, features = ["deref"
 enum-as-inner = "0.6.0"
 getset = "0.1.2"
 itertools = "0.13.0"
-mlua = { version = "0.10.0", features = ["lua54", "vendored"], optional = true }
+mlua = { version = "0.10.1", features = ["lua54", "vendored"], optional = true }
 path-absolutize = "3.1.1"
 pathdiff = "0.2.2"
 serde = { version = "1.0.214", features = ["derive", "rc"], optional = true }
-shulkerbox = { version = "0.1.0", default-features = false, optional = true }
+# shulkerbox = { version = "0.1.0", default-features = false, optional = true }
+shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox", rev = "8f05fef7030d3e999a07d621ba581ebbb205dadc", default-features = false, optional = true }
 strsim = "0.11.1"
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.4"
